[package]
name = "w3w-api"
description = "Rust library for what3words public API"
version = "0.1.0"
authors = ["Oleksii Filonenko <brightone@protonmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2"
geo-types = { version = "0.7", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.20.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
ureq = { version = "2.1", features = ["json"] }
url = { version = "2.2", features = ["serde"] }
