[package]
name = "w3w-api"
version = "0.1.1"
documentation = "https://docs.rs/w3w-api"
description = "Rust library for what3words public API"
readme = "../../README.md"
repository = "https://github.com/Br1ght0ne/w3w-rs/"
authors = ["Oleksii Filonenko <brightone@protonmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2"
geo-types = { version = "0.7", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.20.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
ureq = { version = "2.1", features = ["json"] }
url = { version = "2.2", features = ["serde"] }
